# aab2apkGUI

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
openspec/changes/archive/2026-07-01-aab2apk-gui/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-01-aab2apk-gui/specs/aab-convert/: spec.md
openspec/changes/archive/2026-07-01-add-readme/: proposal.md  tasks.md
openspec/changes/archive/2026-07-01-ui-overhaul/: design.md  proposal.md  tasks.md
openspec/specs/aab-convert/: spec.md
openspec/specs/app-settings/: spec.md
openspec/specs/device-config/: spec.md
openspec/specs/env-check/: spec.md
openspec/specs/file-info/: spec.md
openspec/specs/keystore-manage/: spec.md
openspec/specs/ui-layout/: spec.md
openspec/specs/ui-theme/: spec.md
openspec/specs/ui-workflow/: spec.md
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/bundletool/: mod.rs  parser.rs
src-tauri/src/commands/: convert.rs  device_config.rs  env_check.rs  file_info.rs  keystore.rs  mod.rs  settings.rs
src-tauri/src/config/: mod.rs
src/components/: ConvertProgress.vue  DeviceConfigPanel.vue  EnvCheckDialog.vue  FileDropZone.vue  FileInfoPanel.vue  KeystoreSelector.vue  SettingsDialog.vue  SettingsForm.vue
src/router/: index.ts
src/stores/: convert.ts  env.ts  settings.ts
src/types/: index.ts
src/views/: HomeView.vue  SettingsView.vue
(+8 files in other folders)
