[package]
name = "aab2apk-gui"
version = "0.1.0"
description = "A cross-platform desktop tool to convert AAB files to APK files"
authors = ["you"]
edition = "2021"

[lib]
name = "aab2apk_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
zip = "0.6"
chrono = "0.4"
